# Computer-Graphics-Course

./: CMakeLists.txt  README.md
c1/: README.md  colorChanging.cpp
c2/: README.md  polygonRotateAndScale.cpp  test.cpp
c3/: README.md  animation.cpp
c4/: README.md  ellipse.py  polygon_scanline.py
c5/: README.md  solarSystem.cpp
c6/: HalfEdge.cpp  HalfEdge.h  README.md  objviewer.cpp
c7/: README.md  b_surface.cpp  bspline.cpp
c8/: README.md  basic_builder.cpp  basic_rasterizer.cpp  basic_shader.cpp  block.cpp  color.h  main.cpp  plugins.h  scene.cpp  sphere.cpp
resources/: Earth.tga  scene1.sdf
shaders/: animation.frag  animation.vert  b_surface.frag  bspline.frag  bspline.vert  objviewer.frag  objviewer.vert  solarSystem.frag
utils/: shader.cpp  shader.h  tgaLoader.h
